--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/Gemini_Generated_Image_b73k4yb73k4yb73k.png" />
+        <link rel="icon" type="image/svg+xml" href="/faicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>동호회</title>
     </head>
